@@ -1,9 +1,14 @@
 package com.checkout.hybris.core.populators.payments;
 
-import com.checkout.sdk.common.Address;
-import com.checkout.hybris.core.currency.services.CheckoutComCurrencyService;
 
-import com.checkout.sdk.payments.*;
+import com.checkout.common.Address;
+import com.checkout.common.CountryCode;
+import com.checkout.hybris.core.currency.services.CheckoutComCurrencyService;
+import com.checkout.payments.ProcessingSettings;
+import com.checkout.payments.ProductRequest;
+import com.checkout.payments.ShippingDetails;
+import com.checkout.payments.request.PaymentCustomerRequest;
+import com.checkout.payments.request.PaymentRequest;
 import de.hybris.platform.core.model.order.AbstractOrderEntryModel;
 import de.hybris.platform.core.model.order.CartModel;
 import de.hybris.platform.core.model.product.ProductModel;
@@ -17,12 +22,12 @@ import org.apache.logging.log4j.Logger;
 
 import java.util.Collection;
 import java.util.List;
-import java.util.stream.Collectors;
+import java.util.Optional;
 
 public class DefaultCheckoutComCartModelToPaymentL2AndL3Converter implements CheckoutComCartModelToPaymentL2AndL3Converter {
 
     private static final Logger LOG = LogManager.getLogger(
-        DefaultCheckoutComCartModelToPaymentL2AndL3Converter.class);
+            DefaultCheckoutComCartModelToPaymentL2AndL3Converter.class);
 
     protected final CheckoutComCurrencyService checkoutComCurrencyService;
 
@@ -33,48 +38,49 @@ public class DefaultCheckoutComCartModelToPaymentL2AndL3Converter implements Che
 
     @Override
     public void convert(final CartModel cartModel,
-                        final PaymentRequest<RequestSource> requestSourcePaymentRequest) throws ConversionException {
+                        final PaymentRequest requestSourcePaymentRequest) throws ConversionException {
         populateL2Fields(cartModel, requestSourcePaymentRequest);
         populateL3Fields(cartModel, requestSourcePaymentRequest);
     }
 
 
-    protected void populateL2Fields(final CartModel cart, final PaymentRequest<RequestSource> request) {
-        Processing processing = request.getProcessing();
-        if (processing == null) {
-            processing = new Processing();
-        }
+    protected void populateL2Fields(final CartModel cart, final PaymentRequest request) {
+
+        final ProcessingSettings processing = Optional.of(request)
+                .map(PaymentRequest::getProcessing)
+                .orElse(new ProcessingSettings());
+
         processing.setOrderId(cart.getCheckoutComPaymentReference());
-        processing.setTaxAmount(checkoutComCurrencyService.convertAmountIntoPennies(cart.getCurrency().getIsocode(),
-                                                                                    cart.getTotalTax()));
+        processing.setTaxAmount(checkoutComCurrencyService.removeDecimalsFromCurrencyAmount(cart.getCurrency().getIsocode(),
+                cart.getTotalTax()));
         request.setProcessing(processing);
 
-        CustomerRequest customerRequest = request.getCustomer();
-        if (customerRequest == null) {
-            customerRequest = new CustomerRequest();
-        }
+        final PaymentCustomerRequest customerRequest = Optional.of(request)
+                .map(PaymentRequest::getCustomer)
+                .map(PaymentCustomerRequest.class::cast)
+                .orElse(new PaymentCustomerRequest());
+
         final CustomerModel customerModel = (CustomerModel) cart.getUser();
         customerRequest.setTaxNumber(customerModel.getTaxNumber());
         request.setCustomer(customerRequest);
     }
 
-    protected void populateL3Fields(final CartModel cart, final PaymentRequest<RequestSource> request) {
-        Processing processing = request.getProcessing();
-        if (processing == null) {
-            processing = new Processing();
-        }
+    protected void populateL3Fields(final CartModel cart, final PaymentRequest request) {
+        final ProcessingSettings processing = Optional.of(request)
+                .map(PaymentRequest::getProcessing)
+                .orElse(new ProcessingSettings());
 
         final String currencyIsocode = cart.getCurrency().getIsocode();
-        if(cart.getTotalDiscounts() != null) {
+        if (cart.getTotalDiscounts() != null) {
             processing.setDiscountAmount(
-                checkoutComCurrencyService.convertAmountIntoPennies(currencyIsocode,
-                                                                    cart.getTotalDiscounts()));
+                    checkoutComCurrencyService.removeDecimalsFromCurrencyAmount(currencyIsocode,
+                            cart.getTotalDiscounts()));
         }
         processing.setShippingAmount(
-            checkoutComCurrencyService.convertAmountIntoPennies(currencyIsocode, cart.getDeliveryCost()));
+                checkoutComCurrencyService.removeDecimalsFromCurrencyAmount(currencyIsocode, cart.getDeliveryCost()));
         processing.setShippingTaxAmount(populateShippingTaxAmount(cart));
-        if(((CustomerModel) cart.getUser()).getDutyAmount() != null) {
-            processing.setDutyAmount(checkoutComCurrencyService.convertAmountIntoPennies(currencyIsocode, ((CustomerModel) cart.getUser()).getDutyAmount()));
+        if (((CustomerModel) cart.getUser()).getDutyAmount() != null) {
+            processing.setDutyAmount(checkoutComCurrencyService.removeDecimalsFromCurrencyAmount(currencyIsocode, ((CustomerModel) cart.getUser()).getDutyAmount()));
         }
         request.setProcessing(processing);
 
@@ -87,7 +93,7 @@ public class DefaultCheckoutComCartModelToPaymentL2AndL3Converter implements Che
             address = new Address();
         }
         final AddressModel deliveryAddress = cart.getDeliveryAddress();
-        address.setCountry(deliveryAddress.getCountry().getIsocode());
+        address.setCountry(CountryCode.valueOf(deliveryAddress.getCountry().getIsocode()));
         address.setZip(deliveryAddress.getPostalcode());
         shippingDetails.setAddress(address);
         shippingDetails.setFromAddressZip(populateFromAddress());
@@ -108,27 +114,27 @@ public class DefaultCheckoutComCartModelToPaymentL2AndL3Converter implements Che
     }
 
     protected void populateItems(final List<AbstractOrderEntryModel> entries,
-                                 final PaymentRequest<RequestSource> request) {
-        final List<Product> products = entries.stream().map(this::populateEntry).collect(Collectors.toList());
+                                 final PaymentRequest request) {
+        final List<ProductRequest> products = entries.stream().map(this::populateEntry).toList();
         request.setItems(products);
     }
 
-    protected Product populateEntry(final AbstractOrderEntryModel entry) {
+    protected ProductRequest populateEntry(final AbstractOrderEntryModel entry) {
         final ProductModel product = entry.getProduct();
-        String isocode = entry.getOrder().getCurrency().getIsocode();
-        return Product.builder().commodityCode(product.getCode())
-                      .name(product.getName())
-                      .quantity(entry.getQuantity())
-                      .reference(product.getCode())
-                      .totalAmount(checkoutComCurrencyService
-                                       .convertAmountIntoPennies(isocode,
-                                                                     entry.getTotalPrice()))
-                      .unitOfMeasure(entry.getUnit().getCode())
-                      .taxAmount(checkoutComCurrencyService.convertAmountIntoPennies(isocode, getTaxEntryAmount(entry)))
-                      .unitPrice(checkoutComCurrencyService
-                                     .convertAmountIntoPennies(isocode,
-                                                                   entry.getBasePrice()))
-                      .discountAmount(checkoutComCurrencyService.convertAmountIntoPennies(isocode, populateDiscountValues(entry))).build();
+        final String isoCode = entry.getOrder().getCurrency().getIsocode();
+        return ProductRequest.builder().commodityCode(product.getCode())
+                .name(product.getName())
+                .quantity(entry.getQuantity())
+                .reference(product.getCode())
+                .totalAmount(checkoutComCurrencyService
+                        .removeDecimalsFromCurrencyAmount(isoCode,
+                                entry.getTotalPrice()))
+                .unitOfMeasure(entry.getUnit().getCode())
+                .taxAmount(checkoutComCurrencyService.removeDecimalsFromCurrencyAmount(isoCode, getTaxEntryAmount(entry)))
+                .unitPrice(checkoutComCurrencyService
+                        .removeDecimalsFromCurrencyAmount(isoCode,
+                                entry.getBasePrice()))
+                .discountAmount(checkoutComCurrencyService.removeDecimalsFromCurrencyAmount(isoCode, populateDiscountValues(entry))).build();
     }
 
     private Double populateDiscountValues(AbstractOrderEntryModel entry) {
@@ -142,7 +148,7 @@ public class DefaultCheckoutComCartModelToPaymentL2AndL3Converter implements Che
 
     protected Double getTaxEntryAmount(final AbstractOrderEntryModel entry) {
         Collection<TaxValue> taxValues = entry.getTaxValues();
-        if(taxValues != null && !taxValues.isEmpty()) {
+        if (taxValues != null && !taxValues.isEmpty()) {
             return taxValues.stream().mapToDouble(TaxValue::getValue).sum();
         }
         return 0.0;
